# coreos-cloud-instance-store-provisioner

./: 43-coreos-cloud-instance-store-provisioner.yaml  50-coreos-cloud-instance-store-provisioner.yaml  50-master-coreos-cloud-instance-store-provisioner.yaml  50-worker-coreos-cloud-instance-store-provisioner.yaml  Cargo.toml  README.md  run-qemu.fcc  run.fcc
ci/: test-qemu.sh
src/: coreos-cloud-instance-store-provisioner.service  main.rs
