[package]
name = "coreos-cloud-instance-store-provisioner"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_yaml = "0.8.14"
serde_json = "1.0"
openat = "0.1.19"
openat-ext = "0.1.9"
libsystemd = "0.2.1"
